# joelclaw

./: .agent-loop-recommendations.json  .brain-svx-baseline  .dockerignore  .gitignore  AGENTS.md  AUDIT-firecracker-execution-path.md  CANCEL-1-1.out  CANCEL-1-2.out  CONTEXT.md  DUR-1-1.out  DUR-1-2.out  ERR-1-1.out  ERR-1-2.out  EVIDENCE-DAG-PROVEN.md  FAIL-1-1.out  FLOW-1-1.out  FRIC-1-1.out  FRIC-1-2.out  FRIC-2-1.out  FRIC-3-1.out  FRIC-4-1.out  FRIC-5-1.out  MEM-1-1.out  MEM-1-2.out  MEM-2-1.out  MEM-3-1.out  MEM-4-1.out  MEM-4-2.out  MEM-5-1.out  MEM-5-2.out  MEM-6-1.out  NUUM-1-1.out  NUUM-1-2.out  NUUM-2-1.out  NUUM-3-1.out  NUUM-4-1.out  NUUM-5-1.out  NUUM-6-1.out  OBS-1-1.out  OBS-1-2.out  (+41 more)
.agents/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
.claude/: CLAUDE.md  settings.json
.deepsec/: README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.githooks/: pre-push
.github/: CODEOWNERS
agents/: coder.md  designer.md  ops.md  story-executor.md  voice-call-judge-escalated.md  voice-call-judge.md
context-build/: shitrat-slack-local.md  slack-platform-research.md
docs/: architecture.md  book-outline.md  cli.md  context-budget-analysis-2026-03-04.md  deploy.md  gateway.md  inngest-functions.md  sdk.md  (+11 more)
infra/voice-agent/: README.md  VISION.md  call-joel.sh  call_tracker.py  cleanup-stale.sh  config.default.yaml  main.py  public-context.md  public-openers.txt  pyproject.toml  run.sh  setup-telnyx-webhooks.sh  sms-campaign-vetting-check.sh  start.sh  verify-voice.sh  voice_recall.py
infra/voice-agent/tests/: test_call_tracker.py  test_voice_recall.py
(+1490 files in other folders)
