[project]
name = "joelclaw-voice-agent"
version = "0.1.0"
description = "joelclaw voice agent — bidirectional voice conversations with system tool access"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents[elevenlabs,silero,turn-detector]~=1.3",
    "livekit-plugins-openai~=1.3",
    "livekit-agents[deepgram]~=1.3",
    "pyyaml>=6.0.3",
    "livekit-plugins-noise-cancellation>=0.2.6",
    "convex>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
